# Kanagawa_DNA_Storage

./: .clang-format  .gitignore  50-SF.txt  CMakeLists.txt  README.md  SeedData.txt  analyze.py  requirements.txt
cpp/: CMakeLists.txt  finalize.py
cpp/include/: ReedSolomon.hpp
cpp/src/: GaloisField.cpp  Kanagawa.cpp  Polynomial.cpp
cpp/utils/: reedsolo.py
doc/: bibliography.bib  report.typ
include/: GaloisField.hpp  Polynomial.hpp  Random.hpp
src/: Decoder.cpp  Encoder.cpp  Random.cpp  ReedSolomon.cpp
